<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layoutManager="LinearLayoutManager">

    <RelativeLayout
        android:id="@+id/vehicle_selection_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        android:background="@color/Blue_700"
        android:orientation="vertical"
        android:padding="@dimen/_5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_30sp"
            android:textColor="@color/white"
            android:padding="@dimen/_10dp"
           android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginStart="@dimen/_10dp"
            android:text="@string/roadside"/>


</RelativeLayout>

    <ScrollView
        android:layout_below="@+id/vehicle_selection_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email_lgs_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/_5dp"
            android:paddingBottom="@dimen/_5dp"
            android:paddingEnd="@dimen/_50dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:paddingStart="@dimen/_50dp"
            android:background="@drawable/rectangle_bg"
            android:layout_marginTop="@dimen/_15dp"
            android:textSize="@dimen/_15sp"
            android:text="@string/emaillogs"/>
        <TextView
            android:id="@+id/data_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/_5dp"
            android:paddingBottom="@dimen/_5dp"
            android:paddingEnd="@dimen/_50dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:paddingStart="@dimen/_50dp"
            android:background="@drawable/rectangle_bg"
            android:layout_marginTop="@dimen/_15dp"
            android:textSize="@dimen/_15sp"
            android:text="@string/datatransfer"/>
        <TextView
            android:id="@+id/review_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/_5dp"
            android:paddingBottom="@dimen/_5dp"
            android:paddingEnd="@dimen/_40dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:paddingStart="@dimen/_40dp"
            android:background="@drawable/rectangle_bg"
            android:layout_marginTop="@dimen/_15dp"
            android:textSize="@dimen/_15sp"
            android:text="@string/review"/>
        <TextView
            android:id="@+id/bluetooth_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/_5dp"
            android:paddingBottom="@dimen/_5dp"
            android:paddingEnd="@dimen/_30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:paddingStart="@dimen/_30dp"
            android:background="@drawable/rectangle_bg"
            android:layout_marginTop="@dimen/_15dp"
            android:textSize="@dimen/_15sp"
            android:text="@string/bluetooth"/>
        <TextView
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/_5dp"
            android:paddingBottom="@dimen/_5dp"
            android:paddingEnd="@dimen/_50dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:paddingStart="@dimen/_50dp"
            android:background="@drawable/rectangle_bg"
            android:layout_marginTop="@dimen/_15dp"
            android:textSize="@dimen/_15sp"
            android:text="@string/emaildvir"/>


        <TextView
            android:id="@+id/exit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/_5dp"
            android:paddingBottom="@dimen/_5dp"
            android:paddingEnd="@dimen/_50dp"
            android:gravity="center"

            android:textColor="@color/white"
            android:paddingStart="@dimen/_50dp"
            android:background="@drawable/rectangle_bg"
            android:layout_marginTop="@dimen/_30dp"
            android:textSize="@dimen/_15sp"
            android:text="@string/exit"/>


    </LinearLayout>
    </ScrollView>
    </RelativeLayout>